--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,9 +36,10 @@ h3 {
   font-size: 48px;
 }
 p {
+  font-family: var(--default-font-family);
   font-weight: normal;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 25px;
   color: var(--third-color);
 }
 a {
@@ -64,6 +65,7 @@ a {
   color: var(--second-color);
 }
 .hero p {
+  font-family: var(--heading-font-family);
   font-size: 36px;
   font-weight: bold;
   margin: 0;
@@ -73,6 +75,11 @@ a {
 .container-day {
   margin-top: 50px;
 }
+
+.date {
+  margin-top: 47px;
+}
+
 .day-img {
   max-width: 80px;
   border-radius: 50%;
@@ -81,6 +88,18 @@ a {
 .days {
   display: inline-block;
   margin-top: 10px;
+}
+.btn-branding-outline {
+  font-family: var(--default-font-family);
+  border: solid 2px var(--third-color);
+  border-radius: 400px;
+  color: var(--third-color);
+  transition: all 100ms ease-in-out;
+}
+
+.btn-branding-outline:hover {
+  color: var(--first-color);
+  background-color: var(--third-color);
 }
 @media (max-width: 992px) {
   h1 {
@@ -92,12 +111,16 @@ a {
   }
   .day-img {
     max-width: 60px;
+    margin-top: 10px;
   }
   .days {
     font-size: 30px;
-    margin-top: 18px;
+    margin-top: 28px;
   }
-
+  .date {
+    font-size: 18px;
+    margin-top: 40px;
+  }
   .container-day {
     margin-top: 15px;
   }
